--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -3,44 +3,61 @@ body{
 }
 
 .form_pos{
-  padding-left: 700px;
+  padding-left: 650px;
 }
 
-.App {
+.card_pos{
+  padding-top: 70px;
+  padding-left: 20px;
+  width: 5rem;
+  display: block;
+}
+
+.card_h{
+  cursor: pointer;
   text-align: center;
+  display: block;
+  top: 0px;
+  position: relative;
+  width: 300px;
+  background-color: #f2f8f9;
+  border-radius: 4px;
+  padding: 20px 20px;
+  margin: 5px;
+  text-decoration: none;
+  z-index: 0;
+  overflow: hidden;
+  border: 1px solid #f2f8f9;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card_h:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: -16px;
+  right: -16px;
+  height: 32px;
+  width: 32px;
+  border-radius: 32px;
+  transform: scale(2);
+  transform-origin: 50% 50%;
+  transition: transform 0.15s ease-out;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card_h:hover{
+  transition: all 0.2s ease-out;
+  box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+  top: -4px;
+  border: 1px solid #cccccc;
+  background-color: white;
+  opacity: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card_h:hover:before {
+  transform: scale(2.15);
 }
 
-.App-link {
-  color: #61dafb;
+.title_style{
+  font-size: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
