--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -1,17 +1,18 @@
 body {
-  font-family: 'Helvetica Neue';
-  background: rgb(244, 244, 244);
+  font-family: 'PT Serif', serif;
+  /*background: rgb(244, 244, 244);
   background: radial-gradient(
     circle,
     rgba(210, 210, 210, 255) 0%,
     rgba(210, 210, 210, 255) 0%,
     rgba(210, 210, 210, 255) 100%
-  );
+  );*/
 }
 
 .color-nav {
   background-color: rgba(34, 31, 76, 255);
-  height: 80px    
+  height: 80px;
+  font-family: 'PT Serif', serif;    
 }
 
 /* .logo-image {
@@ -26,8 +27,25 @@ body {
   margin-top: 150px;
 }
 
+.space_between{
+  padding-bottom: 100px;
+}
+
+.title_list{
+  text-align: center;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #4D3EA4 !important;
+    background-color: cutom-color;
+    border-color: #4D3EA4 !important;
+    border-color: cutom-cor;
+}
+
 .form_pos{
   padding-left: 650px;
+  font-family: 'PT Serif', serif;
 }
 
 .pos{
@@ -38,12 +56,14 @@ body {
 }
 
 .margin{
-  margin-top: 80px;
+  font-family: 'PT Serif', serif;
+  margin-top: 90px;
   margin-left: 80px;
   margin-right: 80px;
 }
 
 .card_h{
+  font-family: 'PT Serif', serif;
   cursor: pointer;
   text-align: center;
   display: block;
@@ -87,4 +107,3 @@ body {
 .title_style{
   font-size: 15px;
 }
-
