--- a/frontend/src/Components/LogIn.css
+++ b/frontend/src/Components/LogIn.css
@@ -1,140 +1,57 @@
-
-label,
-input {
-  /* In order to define widths */
-  display: inline-block;
-}
-
-label {
-  width: 30%;
-  /* Positions the label text beside the input */
-  text-align: right;
-}
-
-/* input[type=text]:focus {
-  background-color: lightblue;
-}
-input[type=password]:focus {
-  background-color: lightblue;
-} */
-
-label+input {
-  width: 30%;
-  /* Large margin-right to force the next element to the new-line
-           and margin-left to create a gutter between the label and input */
-  margin: 0% 10% 0% 4%;
-}
-
-
-/* Only the submit button is matched by this selector,
-       but to be sure you could use an id or class for that button */
-
-input+input {
-  float: right;
-}
-
-
-
-
-  pre {
-    width: 70%;
-    color: #fff;
-    font-size: larger;
-  }
-  
-  button {
-    background: #0563b4 !important;
-  }
-  p {
-    color: red;
-  }
-
-
-  
-
-/* Here are the input design */
-/* @import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&subset=greek-ext'); */
-/*
 body{
-	background-image: url("https://images.pexels.com/photos/891252/pexels-photo-891252.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-	background-position: center;
-    background-origin: content-box;
-    background-repeat: no-repeat;
-    background-size: cover;
-	min-height:100vh;
-	font-family: 'Noto Sans', sans-serif;
+  font-family: 'PT Serif', serif;
 }
-*/
 
-.text-center{
-	color:#fff;	
-	text-transform:uppercase;
-    font-size: 23px;
-    margin: -50px 0 80px 0;
-    display: block;
-    text-align: center;
+.margin_log{
+  margin-top: 150px;
+  margin-left: 450px;
+  margin-right: 50px;
 }
-.box{
-	position:absolute;
-	left:50%;
-	top:50%;
-	transform: translate(-50%,-50%);
-    background-color: rgba(0, 0, 0, 0.89);
-	border-radius:3px;
-	padding:70px 100px;
+
+.title{
+  font-family: 'PT Serif', serif;
+	color:black;	
+  font-size: 30px;
+  padding-right: 400px;
+  display: block;
+  text-align: center;
+  margin-bottom: 50px;
 }
-.input-container{
-	position:relative;
-	margin-bottom:25px;
+
+.input-style{
+  position:relative;
+  font-family: 'PT Serif', serif;
+  font-size: 20px;
 }
+
 .input-container label{
-	position:absolute;
-	top:0px;
-	left:0px;
-	font-size:16px;
-	color:#fff;	
-    pointer-event:none;
+  font-size: 50px;
+  position:absolute;
+  pointer-events:none;
 	transition: all 0.5s ease-in-out;
 }
-.input-container input{ 
+
+.input-style input{
+  height: 40px;
+  width: 400px;
+  background-color: #E3E7E9;
+  font-size: 15px;
+  padding: 4px 20px 0;
   border:0;
   border-bottom:1px solid #555;  
-  background:transparent;
-  width:100%;
-  padding:8px 0 5px 0;
-  font-size:16px;
-  color:#fff;
+  padding-left: 10px;
+  font-size:15px;
+  color:black;
 }
-.input-container input:focus{ 
- border:none;	
- outline:none;
- border-bottom:1px solid #e74c3c;	
+
+.pad{
+  padding-bottom: 20px;
 }
-.btn{
-	color:#fff;
-	background-color:#e74c3c;
-	outline: none;
-    border: 0;
-    color: #fff;
-	padding:10px 20px;
-	text-transform:uppercase;
-	margin-top:50px;
-	border-radius:2px;
-	cursor:pointer;
-	position:relative;
-}
-/*.btn:after{
-	content:"";
-	position:absolute;
-	background:rgba(0,0,0,0.50);
-	top:0;
-	right:0;
-	width:100%;
-	height:100%;
-}*/
-.input-container input:focus ~ label,
-.input-container input:valid ~ label{
-	top:-12px;
-	font-size:12px;
-	
+
+.input-style button{
+  font-size: 16px;
+  height: 40px;
+  width: 400px;
+  background-color: rgba(34, 31, 76, 255);
+  color: white;
 }
