--- a/frontend/src/Components/App.css
+++ b/frontend/src/Components/App.css
@@ -107,3 +107,14 @@ body {
 .title_style{
   font-size: 15px;
 }
+
+.list_title{
+  text-align: center;
+  font-size: 20px;
+  padding-top: 10px;
+  padding-bottom: 35px;
+}
+
+.voting_style{
+  padding-left: 55px;
+}
